[package]
name = "password_manager"
version = "0.1.0"
authors = ["Mader Noob <madernoob@protonmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
ioctl-rs = "0.2"
rand = "0.7.3"
rand_chacha = "0.2.2"
sha2 = "0.9.1"
ansi_term = "0.6.3"
rpassword = "5.0.0"
